# Agentic-AI-Engineering

./: Context_testing_Agent.py  Dockerfile  agent_loop_tool_calling.py  context_ingestion_testing.py  ingestion.py  main.py  pyproject.toml  raw_react_prompt.py  schemas.py
backed/: core.py
